--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "chai": "^3.2.0",
     "express": "^4.13.3",
-    "mocha": "^2.2.5"
+    "mocha": "^2.2.5",
+    "request": "^2.60.0"
   }
 }
