--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "geniusIdeaVyFork",
   "main": "index.js",
   "scripts": {
-    "test": "test"
+    "test": "npm run test-server",
+    "start": "node index.js",
+    "test-server": "mocha -R spec ./spec/serverSpec.js"
   },
   "repository": {
     "type": "git",
@@ -16,11 +18,11 @@
     "url": "https://github.com/the-gap-band/geniusidea/issues"
   },
   "homepage": "https://github.com/the-gap-band/geniusidea#readme",
-  
   "dependencies": {
+    "assert": "^1.3.0",
     "chai": "^3.2.0",
     "express": "^4.13.3",
     "mocha": "^2.2.5",
-    "request": "^2.60.0"
+    "request": "^2.61.0"
   }
 }
