--- a/package.json
+++ b/package.json
@@ -23,6 +23,12 @@
     "chai": "^3.2.0",
     "express": "^4.13.3",
     "mocha": "^2.2.5",
-    "request": "^2.61.0"
+    "request": "^2.61.0",
+    "gulp": "^3.9.0",
+    "gulp-connect": "^2.2.0",
+    "gulp-eslint": "^1.0.0",
+    "gulp-open": "^1.0.0",
+    "react": "^0.13.3"
+
   }
 }
