--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "npm run test-server",
     "start": "node index.js",
-    "test-server": "mocha -R spec ./spec/serverSpec.js",
-    "start": "node index.js"
+    "test-server": "mocha -R spec ./spec/serverSpec.js"
   },
   "repository": {
     "type": "git",
@@ -21,14 +20,15 @@
   "homepage": "https://github.com/the-gap-band/geniusidea#readme",
   "dependencies": {
     "assert": "^1.3.0",
+    "body-parser": "^1.13.3",
     "chai": "^3.2.0",
     "express": "^4.13.3",
-    "mocha": "^2.2.5",
-    "request": "^2.61.0",
     "gulp": "^3.9.0",
     "gulp-connect": "^2.2.0",
     "gulp-eslint": "^1.0.0",
     "gulp-open": "^1.0.0",
-    "react": "^0.13.3"
+    "mocha": "^2.2.5",
+    "react": "^0.13.3",
+    "request": "^2.61.0"
   }
 }
