--- a/package.json
+++ b/package.json
@@ -21,15 +21,19 @@
   "dependencies": {
     "assert": "^1.3.0",
     "body-parser": "^1.13.3",
+    "browserify": "^11.0.1",
     "chai": "^3.2.0",
     "express": "^4.13.3",
     "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
     "gulp-eslint": "^1.0.0",
     "gulp-open": "^1.0.0",
     "mocha": "^2.2.5",
     "pg": "^4.4.1",
     "react": "^0.13.3",
-    "request": "^2.61.0"
+    "reactify": "^1.1.1",
+    "request": "^2.61.0",
+    "vinyl-source-stream": "^1.1.0"
   }
 }
