--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "assert": "^1.3.0",
     "body-parser": "^1.13.3",
+    "bootstrap": "^3.3.5",
     "browserify": "^11.0.1",
     "chai": "^3.2.0",
     "express": "^4.13.3",
