--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-connect": "^2.2.0",
     "gulp-eslint": "^1.0.0",
     "gulp-open": "^1.0.0",
+    "jquery": "^2.1.4",
     "mocha": "^2.2.5",
     "pg": "^4.4.1",
     "react": "^0.13.3",
