--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "genius_vyfork",
+  "name": "Habitude",
   "version": "1.0.0",
-  "description": "geniusIdeaVyFork",
+  "description": "gap-band-thesis-project",
   "main": "app.js",
   "scripts": {
     "test": "npm run test-server",
@@ -36,6 +36,7 @@
     "react": "^0.13.3",
     "reactify": "^1.1.1",
     "request": "^2.61.0",
+    "supertest": "^1.1.0",
     "vinyl-source-stream": "^1.1.0"
   }
 }
